o Added tempvar() for creating non-existing temporary variables.
o Now System$findGhostscript() returns system variable 'R_GSCMD' if
  set and it refers to an existing executable (and unless force=TRUE).
  It then checks with Sys.which().  On Windows, it finally searches
  for 'gswin64c.exe' and 'gswin32c.exe' on known locations.  Added
  arguments 'firstOnly' and 'force'.


Version: 1.25.3 [2013-07-27]
o BUG FIX: findSourceTraceback() would give an error "Unknown class of
  'srcfile': character" for source(..., keep.source=FALSE) in recent
  R devel and R v3.0.1 patched.  Thanks Duncan Murdoch for the report.


Version: 1.25.2 [2013-07-03]
o Now installPackages() may also install from https URLs.
o Now more methods can be used without attaching ("loading") the
  package: copyFile(), copyDirectory(), removeDirectory(), createLink(),
  createWindowsShortcut(), downloadFile(), sourceDirectory(), and
  installPackages(), e.g. R.utils::downloadFile().
o Now touchFile() utilizes base::Sys.setFileTime(), iff available.


Version: 1.25.1 [2013-07-01]
o Bumped up package dependencies.


Version: 1.25.0 [2013-06-27]
o UPDATE: Now gzip()/gunzip() returns the output file (was number
  of output bytes processed which are now returned as an attribute).
o Added argument 'temporary' to gzip()/gunzip().
o Added isGzipped() for testing whether a file is gzipped or not.


Version: 1.24.4 [2013-06-17]
o Now argument 'dims' of extract() can also be dimension names.


Version: 1.24.3 [2013-05-25]
o Minor speedups by replacing rm() calls with NULL assignments.
o SPEEDUP: readTable() no longer calls gc().


Version: 1.24.2 [2013-05-20]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.
o CRAN POLICY: Now all Rd example lines are at most 100 characters long.


Version: 1.24.1 [2013-05-13]
o The workaround needed by isDirectory() due to a bug in
  file.info() is now applied only for R (< 3.0.2), since the
  bug was been fixed in R 3.0.1 patched (PR#15302).

